--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -42,7 +42,7 @@ ul {
     margin-left: auto;
 }
 .theme-btn {
-    background-color: #28e98c!important;
+    background-color: var(--primary_color)!important;
     color: #000000;
     display: block;
     text-align: center;
@@ -55,7 +55,7 @@ ul {
     border: none;
     transition: .3s;
     cursor: pointer;
-    border: 2px solid #28e98c;
+    border: 2px solid  var(--primary_color);
 }
 .theme-btn i {
     font-size: 24px;
@@ -65,7 +65,7 @@ ul {
 }
 .theme-btn:hover {
     background:none!important;
-    color: #28e98c;
+    color:  var(--primary_color);
 }
 .custom-container {
     max-width: 1130px;
@@ -447,7 +447,7 @@ main.drake-main {
     height: 30px;
     border-radius: 50%;
     position: relative;
-    background: #28e98c;
+    background:  var(--primary_color);
 }
 .global-color .global-color-option .color-boxed a::before {
     content: '';
@@ -480,6 +480,9 @@ main.drake-main {
 .global-color .global-color-option .color-boxed a:hover::before,
 .global-color .global-color-option .color-boxed a.clr-active::before {
     opacity: 1;
+}
+.global-color .global-color-option .color-boxed a:nth-child(1) {
+    background: #28e98c;
 }
 .global-color .global-color-option .color-boxed a:nth-child(2) {
     background: #e4af12;
