--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,7 +15,7 @@ body {
     scroll-behavior: smooth;
     color: #999999;
     background: #1f1f1f;
-    line-height: 1.7;
+    line-height: 1.7!important;
     /* overflow-x: hidden; */
     /* height: 100vh; */
 }
